--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,21 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+  
+  test_db:
+    container_name: "workoutDB_test"
+    image: postgres:12.4-alpine
+    volumes:
+      - "./database/postgres-test-data:/var/lib/postgresql/data:rw"
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
